TVP-3498 Sorting with pagination

--- a/ignite/build.gradle
+++ b/ignite/build.gradle
@@ -33,9 +33,7 @@ ext {
 }
 
 dependencies {
-    implementation('org.springframework.boot:spring-boot-starter') {
-        exclude group: "com.h2database", module: "h2"
-    }
+    implementation('org.springframework.boot:spring-boot-starter')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
